--- a/produtos.html
+++ b/produtos.html
@@ -10,7 +10,7 @@
          <h1><img src= "logo.png"></h1>
 
          <ul>
-             <li><a href="index.html">home</a></li>
+             <li><a href="index.html">homeiris</a></li>
              <li><a href="produtos.html">produtos</a></li>
              <li><a href="contato.html">contato</a></li>
          </ul>
