--- a/produtos.html
+++ b/produtos.html
@@ -2,18 +2,24 @@
 <html>
     <head> 
        <meta charset="UTF-8">
-       <title>Produtos - barbearia Alura</title> 
-       <link rel= "stylesheet" hret= "produtos.css">
+       <title>Produtos - barbearia Alura</title>
+
+        <link rel="stylesheet" href="reset.css">
+       <link rel= "stylesheet" href= "produtos.css">
    </head>
    <body>
       <header>
+         <div class="caixa">
          <h1><img src= "logo.png"></h1>
 
+        <nav> 
          <ul>
-             <li><a href="index.html">homeiris</a></li>
+             <li><a href="index.html">home</a></li>
              <li><a href="produtos.html">produtos</a></li>
              <li><a href="contato.html">contato</a></li>
-         </ul>
-     </header>
-       </body>
+               </ul>
+              </nav>
+             </div>
+           </header>
+         </body>
 </html> 
