--- a/produtos.html
+++ b/produtos.html
@@ -12,14 +12,36 @@
          <div class="caixa">
          <h1><img src= "logo.png"></h1>
 
-        <nav> 
-         <ul>
+          <nav> 
+              <ul>
              <li><a href="index.html">home</a></li>
              <li><a href="produtos.html">produtos</a></li>
              <li><a href="contato.html">contato</a></li>
-               </ul>
-              </nav>
-             </div>
-           </header>
-         </body>
-</html> 
+            </ul>
+         </nav>
+      </div>
+     </header>
+     <main> 
+        <ul class="produtos">
+         <li>
+             <h2>Cabelo</h2>
+          <img src="cabelo.jpg">
+          <p>Na tesoura ou máquina, como o cliente preferir</p>
+          <p>R$ 25,00</p>
+       </li>
+      <li>
+         <li>
+         <h2>Barba</h2>
+         <img src="barba.jpg">
+         <p>Corte e desenho profissional de barba</p>
+         <p>R$ 18,00</p>
+         </li>
+      <li>
+        <h2>Cabelo+Barba</h2>
+        <img src="cabelo+barba.jpg">
+        <p>Pacote completo de cabelo e barba</p>
+        <p>R$ 35,00</p>
+     </li>
+    </main>
+  </body>
+</html>  
